
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 OCT 08a
  * in src/common.h
    - added a fake omp_lock_t when OPENMPTHREADS is not defined
  * in src/control.c
    - in reduce_wall_distance_given_wallxyz(), added calls to omp lock and unlock
      before writing the wall distance at one node
    - in find_wall_distance(), added omp_init_lock(), initialized nodelock and passed it as a
      parameter to reduce_wall_distance_given_wallxyz()


2023 OCT 06a
  * in cycle/share/cycle_share.c
    - in add_to_averaged_rates(), now calls find_Sstar() instead of find_Schem()
  * in model/chem/_NH3_Plasma_10s/bavafa2008.c
    - made reactions 1-4 implicit again
  * renamed:
    - _AVERAGEDRATES to _AVERAGEDRATES_CHEM
    - numaveragedrates to numaveragedrates_chem
    - averagedrates_react to averagedrates_chem_id
  * in model/fluid/_Navier-Stokes_plasma/fluid.hh
    - added _AVERAGEDRATES section
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), now calls _averaged_rate() when calculating S[fluxet]
  * in model/share/chem_share.c
    - removed _averaged_rate()
  * in model/share/model_share.c
    - added _averaged_rate() with modifications to handle the fluid (not only the chem) averaged
      rates
  * in src/common.h
    - added #define numaveragedrates (numaveragedrates_chem+numaveragedrates_fluid)
    

2023 OCT 05c
  * in model/chem/_NH3_Plasma_10s/chem.hh
    - added missing 3 and 4 to averagedrates_react


2023 OCT 05b
  * in model/chem/_NH3_Plasma_10s/bavafa2008.c
    - added _average_rates() calls to reactions 3 and 4
    - removed the implicit treatment of reactions 1-4
    

2023 OCT 05a
  * in cycle/share/cycle_share.c