@@ -92,6 +92,10 @@ static void find_dSchem_dU(np_t *np, gl_t *gl, long l, sqmat_t dS_dU){
     for (s=0; s<nf; s++)  dS_dU[k][s]+=dWdTv[k]*dTdU[s];
     for (s=0; s<nf; s++)  dS_dU[k][s]+=dWdTe[k]*dTdU[s];
   }
+
+#ifndef TEST
+  for (k=0; k<nf; k++) dSchemdU[k][k]=min(0.0e0,dSchemdU[k][k]);
+#endif
 }
 
 
